# random_projects

adaptive_quadrature/: integral.c
barrier/src/: Barrier.java  Graph.java  Main.java  Test.java
fractals/: index.html
kinhgts_tour_warnsdorf/: CMakeLists.txt  KnightsTour.cpp  KnightsTour.h  main.cpp
kk1/: index.html  migration.sql
kk1/app/: app.js
kk1/app/api/: index.php
kk1/css/: style.css
kk1/partials/: lists.html
knights_tour/: CMakeCache.txt  CMakeLists.txt  KnightsTour.cpp  KnightsTour.h  Makefile  Test.cpp  Test.h  cmake_install.cmake  knights_tour  main.cpp  main.cpp~  wff
n_bodies_BH/: Body.cpp  Body.h  CMakeLists.txt  Quadrant.cpp  Quadrant.h  Simulator.cpp  Simulator.h  dCMakeLists.txt  main.cpp
n_bodies_BH/SFML-2.3.2/share/SFML/doc/html/: classsf_1_1Drawable.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1View.html
numerical_integrals/src/zilvinas/projects/: Integral.java  Main.java  ParallelIntegrator.java
vilnieciai/: Gemfile
vilnieciai/app/views/layouts/: application.html.erb
vilnieciai/config/: application.rb  database.yml  secrets.yml
vilnieciai/config/initializers/: session_store.rb
